Fixed vertical spacing about us page

--- a/app/about/About.module.css
+++ b/app/about/About.module.css
@@ -3,7 +3,7 @@
   margin-top: calc(var(--spacing) * 2);
   display: flex;
   flex-direction: column;
-  gap: calc(var(--spacing) * 1.5);
+  gap: calc(var(--spacing) * 2);
   height: 100%;
   min-height: 100dvh;
   max-width: 100dvw;
